<resources>
    <string name="app_name">简聊</string>
    <string name="action_settings">Settings</string>
    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_email_hint">请再次输入密码&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>

    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="mian_tab_set">设置</string>

    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="agree">接受</string>
    <string name="new_friend">新的朋友</string>

    <string name="chat">聊天</string>
    <string name="add_friend">添加好友</string>

    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="logout">退出登陆</string>

    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="dialog_bottom_picture">拍照</string>
    <string name="dialog_bottom_import_from_local">从本地选取</string>
    <string name="share_dialog_cancel">取消</string>
    <string name="layout_dialog_loading">正在加载</string>
    <string name="change_password">密码修改</string>
    <string name="exit_login">退出登录</string>
    <string name="current_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="password_hint">6-16个字符，区分大小写</string>
    <string name="confirm_password">确认密码</string>
    <string name="confirm">确认</string>
    <string name="original_password">原密码不能为空</string>
    <string name="new_password_not_null">新密码不能为空</string>
    <string name="confirm_password_not_null">确认密码不能为空</string>
    <string name="passwords_invalid">密码必须为6-16位字符，区分大小写</string>
    <string name="passwords_do_not_match">填写的确认密码与新密码不一致</string>
    <string name="new_and_old_password">新旧密码一致</string>
    <string name="update_password_succeed">密码修改成功，请重新登录</string>
    <string name="update_password_failure">密码修改失败，请重试</string>
    <string name="new_message_remind">接收新消息通知</string>
    <string name="sound_notice">声音</string>
    <string name="select_sound">新消息提示音</string>
    <string name="shake_notice">震动</string>
    <string name="ac_about_sdk_version">SDK 版本</string>
    <string name="ac_about_simplechat_version">简聊版本</string>
    <string name="update_log">更新日志</string>
    <string name="function_introduce">功能介绍</string>
    <string name="open_source_licenses">开源协议</string>
    <string name="new_user">新用户</string>
    <string name="forgot_password">忘记密码</string>
    <string name="Login">登录</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="powered">Powered by JK</string>
    <string name="enter_password">确认密码</string>
    <string name="motto">个性签名</string>
    <string name="delete_friend">删除好友</string>
    <string name="email">邮箱</string>
    <string name="birthday">生日</string>
    <string name="gender">性别</string>
    <string name="nickname">昵称</string>
    <string name="avatar">头像</string>
    <string name="about_simple_chat">关于简聊</string>
    <string name="helper">在线助手</string>
    <string name="cancel">取消</string>

</resources>
