<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f6"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:text="@string/avatar"
            android:textColor="@color/base_color_text_black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14sp"
            android:scaleType="centerCrop" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:background="#dfdfdd" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45.5dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:text="@string/user_name"
            android:textColor="@color/base_color_text_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="14dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="#999"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:background="#dfdfdd" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45.5dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:text="@string/gender"
            android:textColor="@color/base_color_text_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="14dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="#999"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:background="#dfdfdd" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45.5dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:text="@string/birthday"
            android:textColor="@color/base_color_text_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="14dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="#999"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:background="#dfdfdd" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45.5dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:text="@string/email"
            android:textColor="@color/base_color_text_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:textColor="#999"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:background="#dfdfdd" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45.5dp"
        android:layout_marginBottom="@dimen/margin_16"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:text="@string/motto"
            android:textColor="@color/base_color_text_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_motto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="14dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="#999"
            android:textSize="14sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_add_friend"
        style="@style/style_text_white"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_login_selector"
        android:text="@string/add_friend" />

    <Button
        android:id="@+id/btn_delete_friend"
        style="@style/style_text_white"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_red_selector"
        android:text="@string/delete_friend" />

</LinearLayout>